js/js.translator/testData/incremental/invalidation/multiPlatformSimple/lib1/js/l1js.0.kt
actual fun lib1CommonFun(): Int = 0
